--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         </div>
         <div class="container">
             <input type="checkbox" id="mario" />
-            <label for="mario">
-            </label>
+            <div class="boletClass">
+                <div id="bolet"></div>
+            </div>
+            
         </div>
     </main>  
     <footer>
