Browser firing fire Anim

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         </div>
         <div class="container">
             <input type="checkbox" id="mario" />
-            <div class="boletClass">
+            <div class="browser">
+                <div class="boletClass">                
+                </div>
                 <div id="bolet"></div>
             </div>
-            
+                        
         </div>
     </main>  
     <footer>
