--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     <div id="star"></div>
 
     <header>
+        <div id="kirby"></div>
     </header>
    
     <main>
         <div>
+            <!--
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur officiis nihil beatae, repellat, nesciunt voluptates perspiciatis quod perferendis eum esse asperiores! Expedita porro omnis repellendus fugiat debitis est praesentium corrupti?</p>
+
+            -->
         </div>
         <div class="container">
             <input type="checkbox" id="mario" />
